--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-prisma 
 fastapi
 uvicorn
 python-dotenv
@@ -7,3 +6,5 @@ PyJWT
 pydantic
 pydantic[email]
 python-multipart
+prisma
+prisma-client-py
