--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
     "builds": [
       {
         "src": "main.py",
-        "use": "@vercel/python"
+        "use": "@vercel/python",
+        "config": {
+          "runtime": "python3.11" 
+        }
       }
     ],
     "routes": [
@@ -18,4 +21,3 @@
     "regions": ["iad1"],
     "framework": "fastapi"
   }
-  
